- Fix double trigger of 'mp_order_paid' hook
- Added APO state codes to the marketpress-data.php so addresses can make it past PayPal's address checker, 
- Use "APO", "FPO" or "DPO" for the City and 10 digit Zip code.
- Sorted USPS shipping choices in Ascending order so that the lowest price will be the default. 
- Changed the Shipping sub options <select> to a select box instead of a dropdown.
- Other minor bug/notice fixes

2.7 - 10/03/2012 - Aaron Edwards
----------------------------------------------------------------------
- Include shopping cart item details in orders CSV exports
- fix special instructions in CSV order exports
- Add special instructions to admin new order notification
- Support ecommerce tracking with our Google Analytics plugin on multisite
- Don't require shipping fields when Shipping Modules are turned off
- Display shipping inclusive of tax if tax inclusive pricing is on
- Urlencode paypal url fields to support utf8 store slugs
- Fix an error and debug code in PayPal Express gateway
- Fix custom message showing in cart widget when empty: http://premium.wpmudev.org/forums/topic/shopping-cart-page-message-repeating-in-shopping-cart-widget
- Fix hooks for Affiliate plugin integration with Manual Payments gateway. Props @Rystraum!
- iDeal gateway bugfixes
- Fix rounding problems with tax prices when tax inclusive pricing is on
- Fix bug in flat rate shipping calculations
- Fix issue with shipping being charged for downloadable orders in global cart

2.6.4 - 9/04/2012 - Aaron Edwards
----------------------------------------------------------------------
- Important bugfix with saving Extra Shipping costs and Weights
- Fix bugs in iDeal gateway: http://premium.wpmudev.org/forums/topic/ideal-making-it-work

2.6.3 - 8/29/2012 - Aaron Edwards
----------------------------------------------------------------------
- Add Schema.org microdata to products for SEO, props @aristath!
- Add "from" price label to listings of multiple variation products